--- a/about.html
+++ b/about.html
@@ -4,20 +4,17 @@
   <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width,initial-scale=1"/>
   <title>من نحن – Khotwa</title>
-  <meta name="description" content="تعرف على مجلس طلاب خطوة في جامعة لا تروب – الرؤية، الرسالة، القيم والتنظيم وفريق العمل."/>
+  <meta name="description" content="تعرف على مجلس طلاب خطوة في جامعة لا تروب – الرؤية، الرسالة، القيم والتنظيم وفريق العمل.">
   <link rel="canonical" href="https://khotwastudentcouncil.com/about.html"/>
   <meta name="robots" content="index,follow"/>
 
-  <!-- Open Graph -->
+  <!-- OG/Twitter -->
   <meta property="og:type" content="website"/>
   <meta property="og:site_name" content="Khotwa Student Council"/>
   <meta property="og:title" content="من نحن – Khotwa"/>
   <meta property="og:description" content="مجلس طلاب خطوة يمثل طلاب برنامج خطوة في جامعة لا تروب – ملبورن."/>
   <meta property="og:url" content="https://khotwastudentcouncil.com/about.html"/>
-  <!-- نستخدم شعار المجلس كصورة مشاركة لهذه الصفحة -->
   <meta property="og:image" content="https://g.top4top.io/p_3516rfttb1.jpg"/>
-
-  <!-- Twitter -->
   <meta name="twitter:card" content="summary_large_image"/>
   <meta name="twitter:title" content="من نحن – Khotwa"/>
   <meta name="twitter:description" content="مجلس طلاب خطوة يمثل طلاب برنامج خطوة في جامعة لا تروب – ملبورن."/>
@@ -30,35 +27,45 @@
     a{color:inherit;text-decoration:none} a:visited{color:inherit}
     .container{width:min(1120px,92%);margin-inline:auto}
 
-    /* وصولية خفيفة */
+    /* وصولية */
     :where(a,button,[role="button"],input,select,textarea):focus-visible{outline:3px solid #2563eb;outline-offset:3px;border-radius:8px}
     .skip-link{position:absolute;inset-inline-start:1rem;inset-block-start:-100px;background:#fff;color:#000;padding:.6rem .9rem;border-radius:.5rem;box-shadow:0 2px 8px rgba(0,0,0,.15);z-index:1000}
     .skip-link:focus{inset-block-start:1rem}
 
-    /* Navbar */
+    /* Navbar (مشترك) */
     .navbar{position:sticky;top:0;background:#fff;border-bottom:1px solid var(--ring);z-index:40}
-    .nav-inner{display:flex;justify-content:space-between;align-items:center;padding:.8rem 0}
+    .nav-inner{display:flex;justify-content:space-between;align-items:center;padding:.8rem 0;gap:.8rem;position:relative}
     .brand{display:flex;align-items:center;gap:.8rem;font-weight:700}
     .brand .logo{width:40px;height:40px;object-fit:cover;border-radius:8px}
     .nav-links{display:flex;gap:1rem;align-items:center}
     .nav-links a{padding:.5rem .75rem;border-radius:10px}
     .nav-links a:hover{background:var(--card)}
     .lang-toggle{padding:.45rem .75rem;border:1px solid var(--ring);background:#fff;border-radius:10px;cursor:pointer}
+    .menu-toggle{display:none;align-items:center;gap:.5rem;padding:.5rem .7rem;border:1px solid var(--ring);background:#fff;border-radius:10px;cursor:pointer}
+    .menu-toggle svg{width:20px;height:20px}
+    @media (max-width:900px){
+      .menu-toggle{display:inline-flex}
+      .nav-links{
+        position:absolute; inset-inline:0; top:calc(100% + 8px);
+        background:#fff; border:1px solid var(--ring); border-radius:12px;
+        display:grid; gap:.2rem; padding:.4rem;
+        box-shadow:0 12px 30px rgba(2,6,23,.10);
+        max-height:0; overflow:hidden; opacity:0; transform:scale(.98);
+        transition:max-height .2s ease, opacity .2s ease, transform .2s ease, padding .2s ease;
+      }
+      .nav-links[data-open="true"]{max-height:80vh;opacity:1;transform:scale(1);padding:.6rem}
+      .nav-links a,.lang-toggle{padding:.7rem .9rem}
+    }
 
-    /* Sections */
     section{padding:2rem 0}
     .grid{display:grid;gap:1rem}
     .grid-2{grid-template-columns:repeat(2,1fr)}
     @media(max-width:980px){.grid-2{grid-template-columns:1fr}}
     .card{background:#fff;border:1px solid var(--ring);border-radius:16px;padding:1rem}
     .muted{color:var(--muted)}
-
-    /* Members */
     .members{display:grid;grid-template-columns:repeat(auto-fit,minmax(220px,1fr));gap:1rem;margin-top:2rem}
     .member-card{background:#fff;border:1px solid var(--ring);border-radius:16px;padding:1rem;text-align:center}
     .member-card img{width:100%;height:220px;object-fit:cover;border-radius:12px;margin-bottom:.6rem}
-
-    /* Footer */
     footer{border-top:1px solid var(--ring);padding:1rem 0;margin-top:1rem}
     .foot{display:flex;justify-content:space-between;gap:1rem;align-items:center}
   </style>
@@ -66,15 +73,21 @@
 <body>
   <a class="skip-link" href="#main">تخطَّ إلى المحتوى</a>
 
-  <!-- Navbar -->
   <nav class="navbar" aria-label="الشريط العلوي">
     <div class="container nav-inner">
       <a class="brand" href="/index.html">
-        <img src="https://g.top4top.io/p_3516rfttb1.jpg" alt="شعار مجلس طلاب خطوة" class="logo" width="80" height="80">
+        <img src="https://g.top4top.io/p_3516rfttb1.jpg" alt="شعار مجلس طلاب خطوة" class="logo" width="80" height="80" decoding="async">
         <span data-lang="ar">مجلس طلاب خطوة – La Trobe</span>
         <span data-lang="en" hidden>Khotwa Student Council – La Trobe</span>
       </a>
-      <div class="nav-links">
+
+      <button id="menu-toggle" class="menu-toggle" type="button"
+              aria-controls="primary-nav" aria-expanded="false" aria-label="فتح وإغلاق القائمة">
+        <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" aria-hidden="true"><path d="M4 7h16M4 12h16M4 17h16"/></svg>
+        القائمة
+      </button>
+
+      <div class="nav-links" id="primary-nav" data-open="false">
         <a href="/about.html" aria-current="page"><span data-lang="ar">من نحن</span><span data-lang="en" hidden>About</span></a>
         <a href="/news.html"><span data-lang="ar">الأخبار</span><span data-lang="en" hidden>News</span></a>
         <a href="/events.html"><span data-lang="ar">الفعاليات</span><span data-lang="en" hidden>Events</span></a>
@@ -86,7 +99,6 @@
     </div>
   </nav>
 
-  <!-- About Section -->
   <main class="container" id="main">
     <section>
       <h1 data-lang="ar">من نحن</h1>
@@ -95,30 +107,13 @@
       <p class="muted" data-lang="en" hidden>The Khotwa Student Council represents students of the Khotwa program at La Trobe University – Melbourne.</p>
 
       <div class="grid grid-2">
-        <article class="card">
-          <h3 data-lang="ar">الرؤية</h3><h3 data-lang="en" hidden>Vision</h3>
-          <p data-lang="ar">مجتمع طلابي داعم ومبادر يسهم في نجاح أفراده.</p>
-          <p data-lang="en" hidden>A supportive and proactive student community contributing to members’ success.</p>
-        </article>
-        <article class="card">
-          <h3 data-lang="ar">الرسالة</h3><h3 data-lang="en" hidden>Mission</h3>
-          <p data-lang="ar">توفير فرص وأنشطة وخدمات تعزز تجربة الطالب.</p>
-          <p data-lang="en" hidden>Providing opportunities, activities, and services that enhance the student experience.</p>
-        </article>
-        <article class="card">
-          <h3 data-lang="ar">القيم</h3><h3 data-lang="en" hidden>Values</h3>
-          <p data-lang="ar">العمل الجماعي، الشفافية، التطوع، الابتكار، المسؤولية.</p>
-          <p data-lang="en" hidden>Teamwork, transparency, volunteering, innovation, and responsibility.</p>
-        </article>
-        <article class="card">
-          <h3 data-lang="ar">التنظيم</h3><h3 data-lang="en" hidden>Structure</h3>
-          <p data-lang="ar">رئيس ونائب رئيس، قادة فرق (الفعاليات، الإعلام، العلاقات)، ومنسقون.</p>
-          <p data-lang="en" hidden>President, Vice President, team leaders (events, media, relations), and coordinators.</p>
-        </article>
+        <article class="card"><h3 data-lang="ar">الرؤية</h3><h3 data-lang="en" hidden>Vision</h3><p data-lang="ar">مجتمع طلابي داعم ومبادر يسهم في نجاح أفراده.</p><p data-lang="en" hidden>A supportive and proactive student community contributing to members’ success.</p></article>
+        <article class="card"><h3 data-lang="ar">الرسالة</h3><h3 data-lang="en" hidden>Mission</h3><p data-lang="ar">توفير فرص وأنشطة وخدمات تعزز تجربة الطالب.</p><p data-lang="en" hidden>Providing opportunities, activities, and services that enhance the student experience.</p></article>
+        <article class="card"><h3 data-lang="ar">القيم</h3><h3 data-lang="en" hidden>Values</h3><p data-lang="ar">العمل الجماعي، الشفافية، التطوع، الابتكار، المسؤولية.</p><p data-lang="en" hidden>Teamwork, transparency, volunteering, innovation, and responsibility.</p></article>
+        <article class="card"><h3 data-lang="ar">التنظيم</h3><h3 data-lang="en" hidden>Structure</h3><p data-lang="ar">رئيس ونائب رئيس، قادة فرق (الفعاليات، الإعلام، العلاقات)، ومنسقون.</p><p data-lang="en" hidden>President, Vice President, team leaders (events, media, relations), and coordinators.</p></article>
       </div>
     </section>
 
-    <!-- Members -->
     <section>
       <h2 data-lang="ar">أعضاء المجلس</h2>
       <h2 data-lang="en" hidden>Council Members</h2>
@@ -162,7 +157,6 @@
     </section>
   </main>
 
-  <!-- Footer -->
   <footer>
     <div class="container foot">
       <div class="muted">© <span id="year"></span> Khotwa Student Council</div>
@@ -172,6 +166,14 @@
 
   <script>
     document.getElementById('year').textContent=new Date().getFullYear();
+
+    // منيو الموبايل
+    const menuBtn=document.getElementById('menu-toggle');
+    const primaryNav=document.getElementById('primary-nav');
+    menuBtn.addEventListener('click',()=>{const open=primaryNav.getAttribute('data-open')==='true';primaryNav.setAttribute('data-open',String(!open));menuBtn.setAttribute('aria-expanded',String(!open));});
+    matchMedia('(min-width:901px)').addEventListener('change',e=>{if(e.matches){primaryNav.setAttribute('data-open','false');menuBtn.setAttribute('aria-expanded','false');}});
+
+    // اللغة
     const toggleBtn=document.getElementById('lang-toggle');let isEn=false;
     function setLang(en){
       isEn=en;
