--- a/contact.html
+++ b/contact.html
@@ -4,6 +4,24 @@
 <meta charset="utf-8"/>
 <meta name="viewport" content="width=device-width,initial-scale=1"/>
 <title>تواصل – Khotwa</title>
+<meta name="description" content="تواصل مع مجلس طلاب خطوة – يسعدنا استقبال أسئلتك واقتراحاتك.">
+<link rel="canonical" href="https://khotwastudentcouncil.com/contact.html"/>
+<meta name="robots" content="index,follow"/>
+
+<!-- Open Graph -->
+<meta property="og:type" content="website">
+<meta property="og:site_name" content="Khotwa Student Council">
+<meta property="og:title" content="تواصل – Khotwa">
+<meta property="og:description" content="يسعدنا استقبال أسئلتك واقتراحاتك.">
+<meta property="og:url" content="https://khotwastudentcouncil.com/contact.html">
+<meta property="og:image" content="https://g.top4top.io/p_3516rfttb1.jpg">
+
+<!-- Twitter -->
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:title" content="تواصل – Khotwa">
+<meta name="twitter:description" content="يسعدنا استقبال أسئلتك واقتراحاتك.">
+<meta name="twitter:image" content="https://g.top4top.io/p_3516rfttb1.jpg">
+
 <style>
 :root{--primary:#1e40af;--primary-600:#1d4ed8;--ring:#e5e7eb;--card:#f8fafc;--text:#0f172a;--muted:#6b7280}
 *{box-sizing:border-box} html,body{height:100%}
@@ -11,14 +29,37 @@ body{margin:0;font-family:"Segoe UI",system-ui,-apple-system,Tahoma,Arial,sans-s
 a{color:inherit;text-decoration:none} a:visited{color:inherit}
 .container{width:min(1120px,92%);margin-inline:auto}
 
+/* وصولية */
+:where(a,button,[role="button"],input,select,textarea):focus-visible{outline:3px solid #2563eb;outline-offset:3px;border-radius:8px}
+.skip-link{position:absolute;inset-inline-start:1rem;inset-block-start:-100px;background:#fff;color:#000;padding:.6rem .9rem;border-radius:.5rem;box-shadow:0 2px 8px rgba(0,0,0,.15);z-index:1000}
+.skip-link:focus{inset-block-start:1rem}
+
+/* Navbar (موحّد) */
 .navbar{position:sticky;top:0;background:#fff;border-bottom:1px solid var(--ring);z-index:40}
-.nav-inner{display:flex;justify-content:space-between;align-items:center;padding:.8rem 0}
+.nav-inner{display:flex;justify-content:space-between;align-items:center;padding:.8rem 0;gap:.8rem;position:relative}
 .brand{display:flex;align-items:center;gap:.8rem;font-weight:700}
 .brand .logo{width:40px;height:40px;object-fit:cover;border-radius:8px}
 .nav-links{display:flex;gap:1rem;align-items:center}
 .nav-links a{padding:.5rem .75rem;border-radius:10px}
 .nav-links a:hover{background:var(--card)}
 .lang-toggle{padding:.45rem .75rem;border:1px solid var(--ring);background:#fff;border-radius:10px;cursor:pointer}
+.menu-toggle{display:none;align-items:center;gap:.5rem;padding:.5rem .7rem;border:1px solid var(--ring);background:#fff;border-radius:10px;cursor:pointer}
+.menu-toggle svg{width:20px;height:20px}
+
+/* موبايل: القائمة منسدلة تحت الشريط */
+@media (max-width:900px){
+  .menu-toggle{display:inline-flex}
+  .nav-links{
+    position:absolute; inset-inline:0; top:calc(100% + 8px);
+    background:#fff; border:1px solid var(--ring); border-radius:12px;
+    display:grid; gap:.2rem; padding:.4rem;
+    box-shadow:0 12px 30px rgba(2,6,23,.10);
+    max-height:0; overflow:hidden; opacity:0; transform:scale(.98);
+    transition:max-height .2s ease, opacity .2s ease, transform .2s ease, padding .2s ease;
+  }
+  .nav-links[data-open="true"]{max-height:80vh;opacity:1;transform:scale(1);padding:.6rem}
+  .nav-links a,.lang-toggle{padding:.7rem .9rem}
+}
 
 section{padding:2rem 0}
 .grid{display:grid;gap:1rem;grid-template-columns:1fr 1fr}
@@ -33,6 +74,7 @@ input,textarea{width:100%;padding:.7rem;border:1px solid var(--ring);border-radi
 button{padding:.7rem 1rem;border-radius:10px;border:1px solid var(--ring);background:var(--primary);color:#fff;cursor:pointer;font-weight:600}
 button:hover{background:var(--primary-600)}
 
+/* تثبيت الإطار لتقليل اهتزاز التخطيط */
 iframe{width:100%;height:360px;border:1px solid var(--ring);border-radius:16px}
 
 .popup{position:fixed;top:20px;right:20px;padding:.9rem 1.2rem;border-radius:10px;font-weight:600;display:none;z-index:1000;box-shadow:0 4px 18px rgba(0,0,0,.12)}
@@ -43,14 +85,24 @@ footer{border-top:1px solid var(--ring);padding:1rem 0;margin-top:1rem}
 </style>
 </head>
 <body>
-<nav class="navbar">
+<a class="skip-link" href="#main">تخطَّ إلى المحتوى</a>
+
+<nav class="navbar" aria-label="الشريط العلوي">
   <div class="container nav-inner">
     <a class="brand" href="/index.html">
-      <img src="https://g.top4top.io/p_3516rfttb1.jpg" class="logo" alt="شعار مجلس طلاب خطوة – La Trobe">
+      <!-- تثبيت أبعاد الشعار يقلّل CLS -->
+      <img src="https://g.top4top.io/p_3516rfttb1.jpg" class="logo" alt="شعار مجلس طلاب خطوة – La Trobe" width="80" height="80" decoding="async">
       <span data-lang="ar">مجلس طلاب خطوة – La Trobe</span>
       <span data-lang="en" hidden>Khotwa Student Council – La Trobe</span>
     </a>
-    <div class="nav-links">
+
+    <button id="menu-toggle" class="menu-toggle" type="button"
+            aria-controls="primary-nav" aria-expanded="false" aria-label="فتح وإغلاق القائمة">
+      <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" aria-hidden="true"><path d="M4 7h16M4 12h16M4 17h16"/></svg>
+      القائمة
+    </button>
+
+    <div class="nav-links" id="primary-nav" data-open="false">
       <a href="/about.html"><span data-lang="ar">من نحن</span><span data-lang="en" hidden>About</span></a>
       <a href="/news.html"><span data-lang="ar">الأخبار</span><span data-lang="en" hidden>News</span></a>
       <a href="/events.html"><span data-lang="ar">الفعاليات</span><span data-lang="en" hidden>Events</span></a>
@@ -62,7 +114,7 @@ footer{border-top:1px solid var(--ring);padding:1rem 0;margin-top:1rem}
   </div>
 </nav>
 
-<main class="container">
+<main class="container" id="main">
   <section class="grid">
     <div>
       <h1 data-lang="ar">راسلنا</h1>
@@ -128,7 +180,20 @@ footer{border-top:1px solid var(--ring);padding:1rem 0;margin-top:1rem}
 <script>
 document.getElementById('year').textContent = new Date().getFullYear();
 
-// زر اللغة (بدون ما يفضّي الصفحة)
+// زر المنيو للموبايل (وصولي وفق نمط Disclosure)
+const menuBtn = document.getElementById('menu-toggle');
+const primaryNav = document.getElementById('primary-nav');
+menuBtn.addEventListener('click', () => {
+  const open = primaryNav.getAttribute('data-open') === 'true';
+  primaryNav.setAttribute('data-open', String(!open));
+  menuBtn.setAttribute('aria-expanded', String(!open));
+});
+// إغلاق القائمة عند الرجوع لديسكتوب
+matchMedia('(min-width:901px)').addEventListener('change', e => {
+  if (e.matches){ primaryNav.setAttribute('data-open','false'); menuBtn.setAttribute('aria-expanded','false'); }
+});
+
+// زر اللغة
 const toggleBtn = document.getElementById('lang-toggle'); let isEn = false;
 function setLang(en){
   isEn = en;
@@ -144,14 +209,12 @@ setLang(false); // يبدأ بالعربي
 // معالجة الإرسال + منبّه
 const form  = document.getElementById('contact-form');
 const popup = document.getElementById('popup');
-
 function show(msg, ok=true){
   popup.textContent = msg;
   popup.className = 'popup ' + (ok ? 'success' : 'error');
   popup.style.display = 'block';
   setTimeout(()=> popup.style.display = 'none', 4000);
 }
-
 form.addEventListener('submit', async (e) => {
   e.preventDefault();
   const data = new FormData(form);
