--- a/index.html
+++ b/index.html
@@ -91,8 +91,8 @@
     <div class="container nav-inner">
       <a class="brand" href="/index.html" aria-label="العودة للرئيسية">
         <img src="https://g.top4top.io/p_3516rfttb1.jpg" class="logo" alt="شعار مجلس طلاب خطوة" width="80" height="80" decoding="async">
-        <span data-lang="ar">مجلس طلاب خطوة – La Trobe</span>
-        <span data-lang="en" hidden>Khotwa Student Council – La Trobe</span>
+        <span data-lang="ar">مجلس طلاب خطوة</span>
+        <span data-lang="en" hidden>Khotwa Student Council</span>
       </a>
 
       <button id="menu-toggle" class="menu-toggle" type="button"
@@ -200,3 +200,4 @@
   </script>
 </body>
 </html>
+
