--- a/news.html
+++ b/news.html
@@ -76,8 +76,8 @@ footer{border-top:1px solid var(--ring);padding:1rem 0;margin-top:1rem}
   <div class="container nav-inner">
     <a class="brand" href="/index.html">
       <img src="https://g.top4top.io/p_3516rfttb1.jpg" alt="شعار مجلس طلاب خطوة" class="logo" width="80" height="80" decoding="async">
-      <span data-lang="ar">مجلس طلاب خطوة – La Trobe</span>
-      <span data-lang="en" hidden>Khotwa Student Council – La Trobe</span>
+      <span data-lang="ar">مجلس طلاب خطوة</span>
+      <span data-lang="en" hidden>Khotwa Student Council</span>
     </a>
 
     <button id="menu-toggle" class="menu-toggle" type="button"
