--- a/register.html
+++ b/register.html
@@ -6,7 +6,7 @@
   <base href="/">
 
   <title>التسجيل في عضوية مجلس طلاب خطوة</title>
-  <meta name="description" content="قدّم طلب الانضمام إلى مجلس طلاب خطوة في جامعة لا تروب – ملبورن.">
+  <meta name="description" content="قدّم طلب الانضمام إلى مجلس طلاب خطوة.">
   <link rel="canonical" href="https://khotwastudentcouncil.com/register"/>
 
   <!-- Open Graph / Twitter -->
@@ -114,7 +114,7 @@
 
   <footer role="contentinfo">
     <div class="container">
-      <small>© <span id="y"></span> Khotwa Student Council – La Trobe</small>
+      <small>© <span id="y"></span> Khotwa Student Council</small>
     </div>
   </footer>
 
@@ -131,3 +131,4 @@
   </script>
 </body>
 </html>
+
