--- a/index.html
+++ b/index.html
@@ -20,19 +20,43 @@
   <meta name="twitter:description" content="فعاليات، أخبار، وخدمات لطلاب خطوة."/>
   <meta name="twitter:image" content="https://b.top4top.io/p_35166f7hr1.jpg"/>
 
+  <!-- Structured Data -->
+  <script type="application/ld+json">
+  {
+    "@context":"https://schema.org",
+    "@type":"Organization",
+    "name":"Khotwa Student Council",
+    "url":"https://khotwastudentcouncil.com/",
+    "logo":"https://g.top4top.io/p_3516rfttb1.jpg",
+    "sameAs":["https://www.instagram.com/khotwa.sc/"]
+  }
+  </script>
+
   <style>
-    :root{--primary:#1e40af;--primary-600:#1d4ed8;--ring:#e5e7eb;--card:#f8fafc;--text:#0f172a;--muted:#6b7280}
-    *{box-sizing:border-box} html,body{height:100%}
+    :root{
+      --primary:#1e40af;--primary-600:#1d4ed8;
+      --ring:#e5e7eb;--card:#f8fafc;
+      --text:#0f172a;--muted:#6b7280
+    }
+    *{box-sizing:border-box}
+    html,body{height:100%}
     body{margin:0;font-family:"Segoe UI",system-ui,-apple-system,Tahoma,Arial,sans-serif;color:var(--text);background:#fff}
-    a{color:inherit;text-decoration:none} a:visited{color:inherit}
+    a{color:inherit;text-decoration:none}
+    a:visited{color:inherit}
     .container{width:min(1120px,92%);margin-inline:auto}
 
     /* وصولية */
-    :where(a,button,[role="button"],input,select,textarea):focus-visible{outline:3px solid #2563eb;outline-offset:3px;border-radius:8px}
-    .skip-link{position:absolute;inset-inline-start:1rem;inset-block-start:-100px;background:#fff;color:#000;padding:.6rem .9rem;border-radius:.5rem;box-shadow:0 2px 8px rgba(0,0,0,.15);z-index:1000}
+    :where(a,button,[role="button"],input,select,textarea):focus-visible{
+      outline:3px solid #2563eb;outline-offset:3px;border-radius:8px
+    }
+    .skip-link{
+      position:absolute;inset-inline-start:1rem;inset-block-start:-100px;
+      background:#fff;color:#000;padding:.6rem .9rem;border-radius:.5rem;
+      box-shadow:0 2px 8px rgba(0,0,0,.15);z-index:1000
+    }
     .skip-link:focus{inset-block-start:1rem}
 
-    /* Navbar (مشترك) */
+    /* Navbar */
     .navbar{position:sticky;top:0;background:#fff;border-bottom:1px solid var(--ring);z-index:40}
     .nav-inner{display:flex;justify-content:space-between;align-items:center;padding:.8rem 0;gap:.8rem;position:relative}
     .brand{display:flex;align-items:center;gap:.8rem;font-weight:700}
@@ -44,7 +68,7 @@
     .menu-toggle{display:none;align-items:center;gap:.5rem;padding:.5rem .7rem;border:1px solid var(--ring);background:#fff;border-radius:10px;cursor:pointer}
     .menu-toggle svg{width:20px;height:20px}
 
-    /* موبايل: القائمة منسدلة تحت الشريط */
+    /* موبايل: القائمة منسدلة */
     @media (max-width: 900px){
       .menu-toggle{display:inline-flex}
       .nav-links{
@@ -59,7 +83,7 @@
       .nav-links a,.lang-toggle{padding:.7rem .9rem}
     }
 
-    /* Hero + أقسام الصفحة (نفس تنسيقك السابق) */
+    /* Hero + أقسام */
     header.hero{background:linear-gradient(180deg,#fff 0,#f5f7ff 100%);border-bottom:1px solid var(--ring)}
     .hero-inner{display:grid;grid-template-columns:1.2fr 1fr;gap:2rem;padding:3rem 0;align-items:center}
     .hero h1{margin:0 0 .5rem;font-size:clamp(1.6rem,2.6vw + 1rem,2.4rem)}
@@ -78,9 +102,33 @@
     .grid{display:grid;gap:1rem}
     .grid-3{grid-template-columns:repeat(3,1fr)}
     .grid-2{grid-template-columns:repeat(2,1fr)}
-    @media (max-width:980px){.hero-inner{grid-template-columns:1fr}.grid-3,.grid-2{grid-template-columns:1fr}}
+    @media (max-width:980px){
+      .hero-inner{grid-template-columns:1fr}
+      .grid-3,.grid-2{grid-template-columns:1fr}
+    }
     footer{border-top:1px solid var(--ring);background:#fff}
     .foot{display:flex;justify-content:space-between;gap:1rem;align-items:center;padding:1.2rem 0}
+
+    /* وضع ليلي تلقائي حسب تفضيل النظام */
+    @media (prefers-color-scheme: dark){
+      :root{
+        --card:#0b1220; --ring:#1f2937;
+        --text:#e5e7eb; --muted:#9ca3af;
+        --primary:#3b82f6; --primary-600:#2563eb;
+      }
+      body{ background:#0a0f1a; }
+      .navbar, footer{ background:#0c1220; border-color:var(--ring); }
+      .card{ background:#0f172a; border-color:var(--ring); }
+      .btn-outline{ background:transparent; border-color:var(--ring); color:var(--text); }
+    }
+
+    /* تقليل الحركة لمن يفضّل ذلك */
+    @media (prefers-reduced-motion: reduce){
+      *{
+        animation-duration:.01ms !important; animation-iteration-count:1 !important;
+        transition-duration:.01ms !important; scroll-behavior:auto !important;
+      }
+    }
   </style>
 </head>
 <body>
@@ -90,7 +138,13 @@
   <nav class="navbar" aria-label="الشريط العلوي">
     <div class="container nav-inner">
       <a class="brand" href="/index.html" aria-label="العودة للرئيسية">
-        <img src="https://g.top4top.io/p_3516rfttb1.jpg" class="logo" alt="شعار مجلس طلاب خطوة" width="80" height="80" decoding="async">
+        <img
+          src="https://g.top4top.io/p_3516rfttb1.jpg"
+          class="logo"
+          alt="شعار مجلس طلاب خطوة"
+          width="80" height="80"
+          decoding="async" loading="lazy"
+        >
         <span data-lang="ar">مجلس طلاب خطوة</span>
         <span data-lang="en" hidden>Khotwa Student Council</span>
       </a>
@@ -127,12 +181,22 @@
         </div>
       </div>
       <div class="hero-img">
-        <img src="https://b.top4top.io/p_35166f7hr1.jpg" alt="مجموعة طلاب مجلس خطوة – La Trobe" width="1600" height="900" loading="eager" decoding="async">
+        <img
+          src="https://b.top4top.io/p_35166f7hr1.jpg"
+          alt="مجموعة طلاب مجلس خطوة – La Trobe"
+          width="1600" height="900"
+          loading="eager" decoding="async"
+          srcset="
+            https://b.top4top.io/p_35166f7hr1.jpg 1600w,
+            https://b.top4top.io/p_35166f7hr1.jpg 1200w,
+            https://b.top4top.io/p_35166f7hr1.jpg 800w"
+          sizes="(max-width:980px) 92vw, 50vw"
+        >
       </div>
     </div>
   </header>
 
-  <!-- About + Events (كما هي) -->
+  <!-- About -->
   <section aria-labelledby="about-ar" class="container">
     <div class="section-head">
       <h2 id="about-ar" data-lang="ar">من نحن</h2>
@@ -147,6 +211,7 @@
     </div>
   </section>
 
+  <!-- Events -->
   <section aria-labelledby="events-ar" class="container">
     <div class="section-head">
       <h2 id="events-ar" data-lang="ar">الفعاليات القادمة</h2>
@@ -171,22 +236,42 @@
     // سنة الحقوق
     document.getElementById('year').textContent = new Date().getFullYear();
 
-    // زر المنيو للموبايل
+    // عناصر القائمة
     const menuBtn = document.getElementById('menu-toggle');
     const primaryNav = document.getElementById('primary-nav');
+
+    function setMenu(open){
+      primaryNav.setAttribute('data-open', String(open));
+      menuBtn.setAttribute('aria-expanded', String(open));
+      if(open){ primaryNav.querySelector('a,button')?.focus(); }
+    }
+
     menuBtn.addEventListener('click', () => {
       const open = primaryNav.getAttribute('data-open') === 'true';
-      primaryNav.setAttribute('data-open', String(!open));
-      menuBtn.setAttribute('aria-expanded', String(!open));
-    });
-    // اغلاق القائمة عند تكبير الشاشة
-    matchMedia('(min-width:901px)').addEventListener('change', e=>{
-      if(e.matches){ primaryNav.setAttribute('data-open','false'); menuBtn.setAttribute('aria-expanded','false'); }
+      setMenu(!open);
     });
 
-    // تبديل اللغة (نفس منطقك)
+    // إغلاق عند توسيع الشاشة
+    matchMedia('(min-width:901px)').addEventListener('change', e=>{
+      if(e.matches) setMenu(false);
+    });
+
+    // إغلاق بالنقر خارج
+    document.addEventListener('click', (e)=>{
+      const open = primaryNav.getAttribute('data-open') === 'true';
+      if(open && !primaryNav.contains(e.target) && !menuBtn.contains(e.target)){
+        setMenu(false);
+      }
+    });
+
+    // إغلاق بـ ESC
+    document.addEventListener('keydown', (e)=>{
+      if(e.key === 'Escape') setMenu(false);
+    });
+
+    // تبديل اللغة + حفظ التفضيل
     const toggleBtn = document.getElementById('lang-toggle');
-    let isEn = false;
+    let isEn = localStorage.getItem('khotwa_lang') === 'en';
     function setLang(en){
       isEn = en;
       document.querySelectorAll('[data-lang="ar"]').forEach(el => el.hidden = en);
@@ -194,10 +279,10 @@
       document.documentElement.lang = en ? 'en' : 'ar';
       document.documentElement.dir  = en ? 'ltr' : 'rtl';
       toggleBtn.textContent = en ? 'العربية' : 'English';
+      localStorage.setItem('khotwa_lang', en ? 'en' : 'ar');
     }
     toggleBtn.addEventListener('click',()=> setLang(!isEn));
-    setLang(false);
+    setLang(isEn);
   </script>
 </body>
 </html>
-
