--- a/about.html
+++ b/about.html
@@ -20,9 +20,22 @@
   <meta name="twitter:description" content="مجلس طلاب خطوة يمثل طلاب برنامج خطوة في جامعة لا تروب – ملبورن."/>
   <meta name="twitter:image" content="https://g.top4top.io/p_3516rfttb1.jpg"/>
 
+  <!-- Structured Data: Organization -->
+  <script type="application/ld+json">
+  {
+    "@context":"https://schema.org",
+    "@type":"Organization",
+    "name":"Khotwa Student Council",
+    "url":"https://khotwastudentcouncil.com/",
+    "logo":"https://g.top4top.io/p_3516rfttb1.jpg",
+    "sameAs":["https://www.instagram.com/khotwa.sc/"]
+  }
+  </script>
+
   <style>
     :root{--primary:#1e40af;--ring:#e5e7eb;--card:#f8fafc;--text:#0f172a;--muted:#6b7280}
     *{box-sizing:border-box}
+    html,body{height:100%}
     body{margin:0;font-family:"Segoe UI",system-ui,-apple-system,Tahoma,Arial,sans-serif;color:var(--text);background:#fff}
     a{color:inherit;text-decoration:none} a:visited{color:inherit}
     .container{width:min(1120px,92%);margin-inline:auto}
@@ -68,6 +81,24 @@
     .member-card img{width:100%;height:220px;object-fit:cover;border-radius:12px;margin-bottom:.6rem}
     footer{border-top:1px solid var(--ring);padding:1rem 0;margin-top:1rem}
     .foot{display:flex;justify-content:space-between;gap:1rem;align-items:center}
+
+    /* وضع ليلي تلقائي */
+    @media (prefers-color-scheme: dark){
+      :root{
+        --card:#0b1220; --ring:#1f2937;
+        --text:#e5e7eb; --muted:#9ca3af;
+      }
+      body{ background:#0a0f1a; color:var(--text); }
+      .navbar, footer{ background:#0c1220; border-color:var(--ring); }
+      .card,.member-card{ background:#0f172a; border-color:var(--ring); }
+      .nav-links a:hover{ background:#0f172a; }
+      .lang-toggle{ background:transparent; color:var(--text); }
+    }
+
+    /* تقليل الحركة */
+    @media (prefers-reduced-motion: reduce){
+      *{ animation-duration:.01ms !important; animation-iteration-count:1 !important; transition-duration:.01ms !important; scroll-behavior:auto !important; }
+    }
   </style>
 </head>
 <body>
@@ -75,8 +106,8 @@
 
   <nav class="navbar" aria-label="الشريط العلوي">
     <div class="container nav-inner">
-      <a class="brand" href="/index.html">
-        <img src="https://g.top4top.io/p_3516rfttb1.jpg" alt="شعار مجلس طلاب خطوة" class="logo" width="80" height="80" decoding="async">
+      <a class="brand" href="/index.html" aria-label="العودة للرئيسية">
+        <img src="https://g.top4top.io/p_3516rfttb1.jpg" alt="شعار مجلس طلاب خطوة" class="logo" width="80" height="80" decoding="async" loading="lazy">
         <span data-lang="ar">مجلس طلاب خطوة</span>
         <span data-lang="en" hidden>Khotwa Student Council</span>
       </a>
@@ -92,7 +123,7 @@
         <a href="/news.html"><span data-lang="ar">الأخبار</span><span data-lang="en" hidden>News</span></a>
         <a href="/events.html"><span data-lang="ar">الفعاليات</span><span data-lang="en" hidden>Events</span></a>
         <a href="/calendar.html"><span data-lang="ar">التقويم</span><span data-lang="en" hidden>Calendar</span></a>
-        <a href="/resources.html"><span data-lang="ar">الموارد</span><span data-lang="en" hidden>Resources</span></a>
+        <a href="/resources.html"><span data-lang="ar">ال%D9%85%D9%88%D8%A7%D8%B1%D8%AF</span><span data-lang="en" hidden>Resources</span></a>
         <a href="/contact.html"><span data-lang="ar">تواصل</span><span data-lang="en" hidden>Contact</span></a>
         <button id="lang-toggle" class="lang-toggle" type="button">English</button>
       </div>
@@ -104,87 +135,4 @@
       <h1 data-lang="ar">من نحن</h1>
       <h1 data-lang="en" hidden>About Us</h1>
       <p class="muted" data-lang="ar">مجلس طلاب خطوة يمثل طلاب برنامج خطوة في جامعة لا تروب – ملبورن.</p>
-      <p class="muted" data-lang="en" hidden>The Khotwa Student Council represents students of the Khotwa program at La Trobe University – Melbourne.</p>
-
-      <div class="grid grid-2">
-        <article class="card"><h3 data-lang="ar">الرؤية</h3><h3 data-lang="en" hidden>Vision</h3><p data-lang="ar">مجتمع طلابي داعم ومبادر يسهم في نجاح أفراده.</p><p data-lang="en" hidden>A supportive and proactive student community contributing to members’ success.</p></article>
-        <article class="card"><h3 data-lang="ar">الرسالة</h3><h3 data-lang="en" hidden>Mission</h3><p data-lang="ar">توفير فرص وأنشطة وخدمات تعزز تجربة الطالب.</p><p data-lang="en" hidden>Providing opportunities, activities, and services that enhance the student experience.</p></article>
-        <article class="card"><h3 data-lang="ar">القيم</h3><h3 data-lang="en" hidden>Values</h3><p data-lang="ar">العمل الجماعي، الشفافية، التطوع، الابتكار، المسؤولية.</p><p data-lang="en" hidden>Teamwork, transparency, volunteering, innovation, and responsibility.</p></article>
-        <article class="card"><h3 data-lang="ar">التنظيم</h3><h3 data-lang="en" hidden>Structure</h3><p data-lang="ar">رئيس ونائب رئيس، قادة فرق (الفعاليات، الإعلام، العلاقات)، ومنسقون.</p><p data-lang="en" hidden>President, Vice President, team leaders (events, media, relations), and coordinators.</p></article>
-      </div>
-    </section>
-
-    <section>
-      <h2 data-lang="ar">أعضاء المجلس</h2>
-      <h2 data-lang="en" hidden>Council Members</h2>
-      <div class="members">
-        <div class="member-card">
-          <img src="https://f.top4top.io/p_35166op0u4.jpg" alt="حمد الهاجري – الرئيس" width="360" height="220" loading="lazy" decoding="async">
-          <h3 data-lang="ar">حمد الهاجري</h3><h3 data-lang="en" hidden>Hamad Al-Hajeri</h3>
-          <p class="muted" data-lang="ar">الرئيس</p><p class="muted" data-lang="en" hidden>President</p>
-        </div>
-        <div class="member-card">
-          <img src="https://c.top4top.io/p_3516ojbq71.jpg" alt="عبدالله الجابري – نائب الرئيس" width="360" height="220" loading="lazy" decoding="async">
-          <h3 data-lang="ar">عبدالله الجابري</h3><h3 data-lang="en" hidden>Abdullah Al-Jaberi</h3>
-          <p class="muted" data-lang="ar">نائب الرئيس</p><p class="muted" data-lang="en" hidden>Vice President</p>
-        </div>
-        <div class="member-card">
-          <img src="https://d.top4top.io/p_3516sprel2.jpg" alt="عبدالهادي المري – قائد المجموعة" width="360" height="220" loading="lazy" decoding="async">
-          <h3 data-lang="ar">عبدالهادي المري</h3><h3 data-lang="en" hidden>Abdulhadi Al-Marri</h3>
-          <p class="muted" data-lang="ar">قائد المجموعة</p><p class="muted" data-lang="en" hidden>Team Leader</p>
-        </div>
-        <div class="member-card">
-          <img src="https://h.top4top.io/p_3516xcf386.jpg" alt="حسن الصيعري – منسق الفعاليات" width="360" height="220" loading="lazy" decoding="async">
-          <h3 data-lang="ar">حسن الصيعري</h3><h3 data-lang="en" hidden>Hassan Al-Sieari</h3>
-          <p class="muted" data-lang="ar">منسق الفعاليات</p><p class="muted" data-lang="en" hidden>Events Coordinator</p>
-        </div>
-        <div class="member-card">
-          <img src="https://g.top4top.io/p_3516zrfo75.jpg" alt="حمد المري – منسق الإعلام" width="360" height="220" loading="lazy" decoding="async">
-          <h3 data-lang="ar">حمد المري</h3><h3 data-lang="en" hidden>Hamad Al-Marri</h3>
-          <p class="muted" data-lang="ar">منسق الإعلام</p><p class="muted" data-lang="en" hidden>Media Coordinator</p>
-        </div>
-        <div class="member-card">
-          <img src="https://e.top4top.io/p_35164gg6m3.jpg" alt="محمد الكثيري – عضو" width="360" height="220" loading="lazy" decoding="async">
-          <h3 data-lang="ar">محمد الكثيري</h3><h3 data-lang="en" hidden>Mohamed Al-Katheeri</h3>
-          <p class="muted" data-lang="ar">عضو</p><p class="muted" data-lang="en" hidden>Member</p>
-        </div>
-        <div class="member-card">
-          <img src="https://i.top4top.io/p_35168rtso7.jpg" alt="موزة العلي – عضو" width="360" height="220" loading="lazy" decoding="async">
-          <h3 data-lang="ar">موزة العلي</h3><h3 data-lang="en" hidden>Mouza Al-Ali</h3>
-          <p class="muted" data-lang="ar">عضو</p><p class="muted" data-lang="en" hidden>Member</p>
-        </div>
-      </div>
-    </section>
-  </main>
-
-  <footer>
-    <div class="container foot">
-      <div class="muted">© <span id="year"></span> Khotwa Student Council</div>
-      <a href="https://www.instagram.com/khotwa.sc/" target="_blank" rel="noopener">Instagram</a>
-    </div>
-  </footer>
-
-  <script>
-    document.getElementById('year').textContent=new Date().getFullYear();
-
-    // منيو الموبايل
-    const menuBtn=document.getElementById('menu-toggle');
-    const primaryNav=document.getElementById('primary-nav');
-    menuBtn.addEventListener('click',()=>{const open=primaryNav.getAttribute('data-open')==='true';primaryNav.setAttribute('data-open',String(!open));menuBtn.setAttribute('aria-expanded',String(!open));});
-    matchMedia('(min-width:901px)').addEventListener('change',e=>{if(e.matches){primaryNav.setAttribute('data-open','false');menuBtn.setAttribute('aria-expanded','false');}});
-
-    // اللغة
-    const toggleBtn=document.getElementById('lang-toggle');let isEn=false;
-    function setLang(en){
-      isEn=en;
-      document.querySelectorAll('[data-lang="ar"]').forEach(el=>el.hidden=en);
-      document.querySelectorAll('[data-lang="en"]').forEach(el=>el.hidden=!en);
-      document.documentElement.lang=en?'en':'ar';
-      document.documentElement.dir=en?'ltr':'rtl';
-      toggleBtn.textContent=en?'العربية':'English';
-    }
-    toggleBtn.addEventListener('click',()=>setLang(!isEn));
-    setLang(false);
-  </script>
-</body>
-</html>
+      <p c
